# bakervm

./: .appveyor.yml  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  MEMORY.md  README.md  compile  run  rustfmt.toml
asm/: compiler.rs  main.rs
bakervm/: io.rs  main.rs  stock.basm  stock.img  vm.rs
bakervm/vm/: call_stack.rs  image.rs  interrupt.rs  mod.rs  stack.rs
basm/: compiler.rs  main.rs
blimpc/: ast.rs  compiler.rs  error.rs  main.rs
core/: config.rs  error.rs  event.rs  image_builder.rs  signal.rs  target.rs  type_t.rs  typedef.rs  value.rs
definitions/: Cargo.toml  LICENSE  README.md  bytecode.rs  config.rs  event.rs  image_builder.rs  instruction.rs  interrupt.rs  lib.rs  program.rs  signal.rs  target.rs  type_t.rs  typedef.rs  value.rs  vm_event.rs
definitions/src/: bytecode.rs  lib.rs  typedef.rs
docs/: basm.md  instruction_set.md  naming_conventions.md  reserved_memory.md
examples/: .gitignore
examples/basm/frames/: buffer_test.basm
examples/basm/mouse/: cross.basm  main.basm
examples/basm/packed_assets/: as-module-overlay.png.basm  complex.basm  dynamic.basm  lore-the-throne.jpg.basm  new_bakervm.png.basm  new_bakervm_dyn.png.basm  static.basm
examples/basm/using_std/: calculate_root.basm  draw_straight_line.basm  keyboard_reflex.basm  main.basm
examples/beast/signals/: basic.beast
examples/beast/simple/: else_if.beast  simple.beast
hudson/: basm.rs  beast.rs  commands.rs  error.rs  main.rs  mnemonic.rs
hudson/basm/: mnemonic.rs  mod.rs
hudson/commands/: compile.rs  mod.rs  pack.rs  stock.rs
hudson/language/: basm.rs  mod.rs
hudson/language/beast/: ast.rs  compiler.rs  mod.rs  parser.rs
src/: beast.pest  error.rs  instruction.rs  main.rs  program.rs  vm.rs
std/: index.basm  index.basm.img
std/graphics/: draw_filled_rect.basm  draw_line.basm  draw_point.basm  draw_rect.basm  index.basm
std/input/: index.basm
std/input/keyboard/: index.basm  is_key_pressed.basm
std/math/: abs.basm  index.basm  max.basm  min.basm  sqrt.basm
test/: image  testsrc2.asm
test/basm/: test.basm  test.basm.img
test/basm/frames/: buffer_test.basm  buffer_test.basm.img
test/basm/include/: main.basm  main.basm.img
test/basm/keyboard/: key_color.basm  key_color.basm.img
test/basm/label/: label_test.basm  (+1 more)
vm/: image.rs  main.rs  stack.rs  vm.rs
vm/output/: cga_display.rs  console.rs  mod.rs
(+5 files in other folders)
