[package]
name = "bakervm"
version = "0.4.0"
authors = ["Julian Laubstein <contact@julianlaubstein.de>"]
description = "A virtual machine for building and running retro games"
repository = "https://github.com/bakervm/bakervm"
homepage = "http://bakervm.org"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "bakervm/bakervm" }

[dependencies]
clap = "^2.24.2"
error-chain = "^0.10.0"
serde_derive = "^1.0.6"
serde = "^1.0.6"
bincode = "^0.8.0"
sdl2 = "0.30.0"

[lib]
name = "definitions"
path = "definitions/lib.rs"
doctest = false

[[bin]]
name = "bakervm"
path = "bakervm/main.rs"
doctest = false

[[bin]]
name = "blimpc"
path = "blimpc/main.rs"
doctest = false
